			CVSps project news

3.3
  There's a new -A option that does author-name mapping in the expected way.

3.2 @ 2012-12-24
  DEPRECATION WARNING: non-fast-export reporting may be removed in the future.
  The tool now always runs in cvs_direct client mode for better performance.
  Multiple tags per revision will be reported (previously only the latest was).
  Local CVS commands are no longer used.  Caching and -x are gone.
  The ever-malfunctioning -A option has been removed.

3.1 @ 2012-12-22
  If the CVS version is new enough to do commitids, they are used.
  Removed the --bkcvs option, as bitkeeper's kernel CVS export is gone.
  Can now handle versions that use CVSACL.

3.0 @ 2012-12-20
  New maintainer is Eric S. Raymond.
  The --fast-export option allows dumping the history as a git import stream.

2.2b1
- add a new line item in the PatchSet output which indicates which 
  branches fork off from after this PatchSet.  This is actually
  the only way to correctly indicate the branching.  The 'Ancestor
  Branch' thing is actually broken by design, and is now deprecated.
- sometimes cvs log has a timezone in it (from Ludwig Nussel)
- better buffer size handling

2.1
- lots of fixes to get the thing working sufficienly for cvs2git
- main features
  - optionally detect and display ancestor branch information for
    new detected branches
  - never allow more than one revision of a file to be in a single
    patchset (this may disturb the patchset numbers for historical
    data :-(
  - use file revisions to help sort, so that initial imports
    won't be listed as patchset 1, with patchset 2 as the actual
    creation of the files.
  - reports log times in localtime (use TZ to override)	
- many downstream patches from Debian, special thanks to Marcus
  Crafter for maintaining.  From the Debian changelog:
   - patch from Kim Hansen to fix time calculation bug
   - documentation patch from J. Bruce Fields
   - directory name handling patch from David Kilzer