@@ -11,7 +11,7 @@ cvsps - fast export the contents of a CVS repository
     [-r 'tag' [-r 'tag']] [-p 'directory'] [-a 'authormap'] [-v] [-t]
     [--summary-first] [--test-log 'filename'] [--diff-opts 'option string']
     [--debuglvl 'bitmask'] [-Z 'compression'] [--root 'cvsroot']
-    [-q] [--fast-export] [-T] [-V] ['repository'] 
+    [-q] [--fast-export] [-T] [-V] ['module-path'] 
 
 == DESCRIPTION ==
 CVSps is a program for generating 'patchset' information from a CVS
@@ -38,6 +38,11 @@ by the importers for other version-control systems.  In this mode,
 
 * Since .cvsignore files have a syntax upward-compatible with that
 of .gitignore files, they're renamed.
+
+You may run CVSps from the top level of a CVS checkout directory, in
+which case no root option or module-path argument is required. You may
+run it from the top level of a CVS repository directory, in which case
+no root option is required but a module-path argument is.
 
 CVSps honors the CVS_RSH and CVS_SERVER environment variables, but
 does not parse the ~/.cvsrc file.
@@ -99,7 +104,7 @@ enable various debug output channels.
 A value 1-9 which specifies amount of compression.  A value of 0
 disables compression.
 --root <cvsroot>::
-Override the setting of CVSROOT (overrides working dir. and
+Override the setting of CVSROOT (overrides working directory and
 environment).
 -T::
 Force deterministic dates for regression testing.  Takes a date
@@ -109,11 +114,10 @@ date of as many seconds passs the base time as its ID.
 Emit the report as a git import stream.
 -V::
 Emit the program version and exit.
-<repository>::
-Operate on the specified repository.  If this option is not 
-specified, either the CVSROOT environment variable must be set
-to point at the repository or CVSps must be run in a repository's
-checkout directory.
+<module-path>::
+Operate on the specified module.  If this option is not given, either
+the CVSROOT environment variable must be set to point directly at the
+module or CVSps must be run in a repository's checkout directory.
 
 == USAGE EXAMPLES ==
 cvsps::
