@@ -2,6 +2,7 @@
 
 3.3
   There's a new -A option that does author-name mapping in the expected way.
+  cvsps can now be run from the top level of a repository directory.
 
 3.2 @ 2012-12-24
   DEPRECATION WARNING: non-fast-export reporting may be removed in the future.
